docs: add Phase 7 (jpackage distribution) summary
Added summary of jpackage distribution design after Phase 6,
including key decisions, implementation components, and deliverables.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>